<resources>
    <string name="app_name">Civil Advocacy App</string>
    <string name="name">Civil Advocacy</string>
    <string name="data">Data provided by</string>
    <string name="info2"><u>Google Civic Information API</u></string>
    <string name="version">Version 1.0</string>
    <string name="copyright">© 2021, Linh Do</string>
    <string name="about">About</string>
    <string name="search">Search Location</string>
    <string name="name_party">Name (Party)</string>
    <string name="position">Position</string>
    <string name="no_file">No JSON Product File Present</string>
    <string name="file_name">Official.json</string>
    <string name="zip">Enter a City, State or a Zip Code:</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_location"> i.e: Chicago, Il or 60601</string>
    <string name="location">Location</string>
    <string name="office">Office</string>
    <string name="official_name">Name</string>
    <string name="official_photo">Official Photo</string>
    <string name="official_address">Address:</string>
    <string name="address_detail">Address Detail</string>
    <string name="official_phone">Phone:</string>
    <string name="phone_detail">Phone Detail</string>
    <string name="official_email">Email:</string>
    <string name="email_detail">Email Detail</string>
    <string name="official_website">Website:</string>
    <string name="website_url">Website URL</string>
    <string name="logo">Logo</string>
    <string name="facebook">Facebook</string>
    <string name="party_name">Party Name</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="divider">divider</string>
    <string name="no_internet_location">No Data For Location</string>
    <string name="no_location_found"><p><b>No Data For Location \n \n</b>Data cannot be accessed or loaded</p></string>
    <string name="no_internet_message"><p><b>No Network Connection \n\n</b>Data cannot be accessed/loaded without an internet connection</p></string>
</resources>